# practiceSubstrate

./: README.md
substrate-package/: README.md
substrate-package/substrate-module-template/: README.md
substrate-package/substratelitties/: Cargo.toml  README.md
substrate-package/substratelitties/runtime/: Cargo.toml
substrate-package/substratelitties/runtime/src/: lib.rs  substratekitties.rs
substrate-package/substratelitties/runtime/wasm/: Cargo.toml  build.sh
substrate-package/substratelitties/runtime/wasm/src/: lib.rs
substrate-package/substratelitties/src/: chain_spec.rs  main.rs  service.rs
