[lib]
crate-type = ['cdylib']

[workspace]
members = []
[profile.release]
lto = true
panic = 'abort'

[features]
default = []
std = ['substratelitties-runtime/std']
[dependencies.substratelitties-runtime]
default-features = false
path = '..'

[package]
authors = ['Parity Technologies <admin@parity.io>']
edition = '2018'
name = 'substratelitties-runtime-wasm'
version = '1.0.0'
